--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ header {
   max-width: 270px;
   min-width: 270px;
   height: 100%;
-  padding: 90px 0px;
+  padding: 40px 0px;
   background: #fff;
 }
 header h1 {
@@ -39,8 +39,8 @@ header span {
   width: 100%;
 }
 header svg {
-  width: 160px;
-  height: 160px;
+  width: 200px;
+  height: 200px;
 }
 header nav {
   padding: 0 60px 0 30px;
@@ -151,6 +151,7 @@ header nav {
   font-size: 27px;
   font-weight: 500;
   letter-spacing: 1px;
+  word-wrap: break-word;
   margin: 0 0 40px 0;
 }
 
@@ -268,12 +269,6 @@ header nav {
   display: block;
 }
 
-.personalize-popup-title {
-  text-align: center;
-  font-size: 27px;
-  font-weight: 500;
-}
-
 .personalize-popup-fields-list {
   padding: 0;
   margin: 0;
@@ -300,7 +295,7 @@ header nav {
   outline: none;
 }
 
-.personalize-popup-clear-btn {
+.personalize-popup-clear-btn, .picker-popup-clear-btn {
   display: block;
   width: 100%;
   padding: 0;
@@ -315,6 +310,11 @@ header nav {
   transition: 0.3s;
   margin: 40px auto 0 auto;
   cursor: pointer;
+}
+
+.picker-popup-clear-btn {
+  width: 160px;
+  margin: 0 !important;
 }
 
 .swag-popup {
@@ -656,4 +656,178 @@ header nav {
 .video-popup-active {
   -webkit-transform: translate3d(min(-30vw, -500px), 0, 0px);
           transform: translate3d(min(-30vw, -500px), 0, 0px);
+}
+
+#color-picker {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 25px auto;
+  width: 200px;
+}
+
+#color-values {
+  display: block;
+  width: 150px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: left;
+  font-family: "Quicksand", sans-serif;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+#pcr_bg {
+  height: 150px;
+  margin: 10px 0;
+}
+
+.picker-field {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 180px;
+  margin-bottom: 10px;
+}
+
+.picker-wrapper,
+.pcr-wrapper {
+  position: relative;
+}
+
+.picker-indicator,
+.pcr-indicator {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.picker,
+.pcr {
+  cursor: crosshair;
+}
+
+.cp-default .picker {
+  width: 150px;
+  height: 150px;
+}
+
+.cp-default .pcr {
+  width: 20px;
+  height: 150px;
+}
+
+.cp-default .pcr-wrapper {
+  margin-left: 10px;
+}
+
+.pcr-wrapper {
+  width: 20px;
+}
+
+.cp-default .picker-indicator {
+  width: 5px;
+  height: 5px;
+  border: 2px solid darkblue;
+  border-radius: 4px;
+  opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+  filter: alpha(opacity=50);
+  background-color: white;
+}
+
+.cp-default .pcr-indicator {
+  width: 100%;
+  height: 10px;
+  left: -4px;
+  opacity: 0.6;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+  filter: alpha(opacity=60);
+  border: 4px solid lightblue;
+  border-radius: 4px;
+  background-color: white;
+}
+
+.personalize-popup-title {
+  text-align: center;
+  font-size: 27px;
+  font-weight: 500;
+}
+
+.color-picker-popup {
+  display: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: fixed;
+  bottom: 0;
+  padding-top: 60px;
+  padding-left: 20px;
+  height: 100vh;
+  right: 260px;
+  width: 200px;
+  background: #fff;
+  z-index: 2;
+}
+
+.tabs-section {
+  display: none;
+  position: fixed;
+  top: 0px;
+  right: 260px;
+  width: 200px;
+  height: 40px;
+  z-index: 10;
+  border-top: none;
+  background: #fff;
+}
+.tabs-section button {
+  background-color: transparent;
+  border: none;
+  height: 40px;
+  width: 100px;
+  cursor: pointer;
+}
+.tabs-section .activeTabBtn {
+  background: #333;
+  color: #fff;
+}
+
+.shapeColorPickerContainer, .textColorPickerContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 40px;
+  padding-right: 10px;
+  font-size: 17px;
+}
+
+.shapeColorPickerContainer {
+  display: none;
+}
+
+.textColorPickerContainer {
+  padding-right: 0;
+}
+
+.shapeColorPicker, .textColorPicker {
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  padding: 0;
+  cursor: pointer;
+  margin: 0;
+  background: transparent;
 }
