--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,9 +19,9 @@ header {
     max-width: 270px;
     min-width: 270px;
     height: 100%;
-    padding: 90px 0px;
+    padding: 40px 0px;
     background: #fff;
-    h1 {
+    h1 { 
         margin-bottom: 40px;
         font-weight: 600;
         font-family: 'Pacifico', cursive;
@@ -41,8 +41,8 @@ header {
         width: 100%;
     }
     svg {
-        width: 160px;
-        height: 160px;
+        width: 200px;
+        height: 200px;
     }
     nav {
         padding: 0 60px 0 30px;
@@ -138,6 +138,7 @@ header {
     font-size: 27px;
     font-weight: 500;
     letter-spacing: 1px;
+    word-wrap: break-word;
     margin: 0 0 40px 0;
 }
 
@@ -243,12 +244,6 @@ header {
     }
 }
 
-.personalize-popup-title {
-    text-align: center;
-    font-size: 27px;
-    font-weight: 500;
-}
-
 .personalize-popup-fields-list {
     padding: 0;
     margin: 0;
@@ -268,7 +263,7 @@ header {
     }
 }
 
-.personalize-popup-clear-btn {
+.personalize-popup-clear-btn, .picker-popup-clear-btn {
     display: block;
     width: 100%;
     padding: 0;
@@ -282,6 +277,11 @@ header {
     transition: 0.3s;
     margin: 40px auto 0 auto;
     cursor: pointer;
+}
+
+.picker-popup-clear-btn {
+    width: 160px;
+    margin: 0 !important;
 }
 
 .swag-popup {
@@ -594,4 +594,168 @@ header {
 
 .video-popup-active {
     transform: translate3d(min(-30vw,-500px), 0, 0px);
+}
+
+#color-picker{
+    display: flex;
+    flex-direction: column;
+    margin:25px auto;
+    width:200px;
+} 
+#color-values{
+    display:block;
+    width: 150px;
+    list-style:none;
+    margin: 0;
+    padding: 0;
+    text-align:left;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px;
+    line-height: 22px;
+}
+
+#pcr_bg {
+    height: 150px;
+    margin: 10px 0;
+}
+      
+.picker-field {
+    display: flex;
+    width: 180px;
+    margin-bottom: 10px;
+}
+.picker-wrapper, 
+.pcr-wrapper {
+    position: relative;
+}
+.picker-indicator,
+.pcr-indicator {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.picker,
+.pcr {
+    cursor: crosshair;
+}
+    
+.cp-default .picker {
+    width: 150px;
+    height: 150px;
+}
+.cp-default .pcr {
+    width: 20px;
+    height: 150px;
+}
+.cp-default .pcr-wrapper {
+    margin-left: 10px;
+}
+
+.pcr-wrapper {
+    width: 20px;
+}
+
+.cp-default .picker-indicator {
+    width: 5px;
+    height: 5px;
+    border: 2px solid darkblue;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    opacity: .5;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+    filter: alpha(opacity=50);
+    background-color: white;
+}
+.cp-default .pcr-indicator {
+    width: 100%;
+    height: 10px;
+    left: -4px;
+    opacity: .6;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+    filter: alpha(opacity=60);
+    border: 4px solid lightblue;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    background-color: white;
+}
+
+.personalize-popup-title {
+    text-align: center;
+    font-size: 27px;
+    font-weight: 500;
+}
+
+.color-picker-popup {
+    display: none;
+    box-sizing: border-box;
+    position: fixed;
+    bottom: 0;
+    padding-top: 60px;
+    padding-left: 20px;
+    height: 100vh;
+    right: 260px;
+    width: 200px;
+    background: #fff;
+    z-index: 2;
+}
+
+.tabs-section {
+    display: none;
+    position: fixed;
+    top: 0px;
+    right: 260px;
+    width: 200px;
+    height: 40px;
+    z-index: 10;
+    // border: 1px solid #000;
+    border-top: none;
+    background: #fff;
+
+    button {
+        background-color: transparent;
+        border: none;
+        height: 40px;
+        width: 100px;
+        cursor: pointer;
+    }
+
+    .activeTabBtn {
+        background: #333;
+        color: #fff;
+    }
+
+}
+
+.shapeColorPickerContainer, .textColorPickerContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 40px;
+    padding-right: 10px;
+    font-size: 17px;
+}
+
+.shapeColorPickerContainer {
+    display: none;
+}
+
+.textColorPickerContainer {
+    padding-right: 0;
+}
+
+
+.shapeColorPicker, .textColorPicker {
+    // display: block;
+    border: none;
+    box-shadow: none;
+    padding: 0;
+    cursor: pointer;
+    margin: 0;
+    background: transparent;
 }
